Changed URLs for LED nad MoTeC

--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
 			<!-- TITLE + LOGO -->
 			<div style="display: flex; justify-content: space-between; align-items: center;">
 				<h2 style="margin: 0; font-size: clamp(18px, 3vw, 34px); flex: 1; margin-right: 10px;">
-					<a href="#"> NUMERICAL MODELING AND SIMULATION OF TRACTOR-TRAILER SYSTEM </a>
+					NUMERICAL MODELING AND SIMULATION OF TRACTOR-TRAILER SYSTEM
 				</h2>
 				<img src="images/ICAR_Logo2.png" alt="CU-ICAR" style="width: 100px; height: 40px;">
 			</div>
@@ -536,7 +536,7 @@
 			<!-- TITLE + LOGO -->
 			<div style="display: flex; justify-content: space-between; align-items: center;">
 				<h2 style="margin: 0; font-size: clamp(18px, 3vw, 34px); flex: 1; margin-right: 10px;">
-					<a href="#"> ADAPTIVE CRUISE CONTROL AND AUTONOMOUS LANE KEEPING OF A RC CAR </a>
+					ADAPTIVE CRUISE CONTROL AND AUTONOMOUS LANE KEEPING OF A RC CAR
 				</h2>
 				<img src="images/ICAR_Logo2.png" alt="CU-ICAR" style="width: 100px; height: 40px;">
 			</div>
@@ -591,7 +591,7 @@
 			<!-- TITLE + LOGO -->
 			<div style="display: flex; justify-content: space-between; align-items: center;">
 				<h2 style="margin: 0; font-size: clamp(18px, 3vw, 34px); flex: 1; margin-right: 10px;">
-					<a href="#"> HMI DISPLAY DESIGN USING MOTEC C1812 DISPLAY DEVICE </a>
+					HMI DISPLAY DESIGN USING MOTEC C1812 DISPLAY DEVICE
 				</h2>
 				<img src="images/Deep_Orange_Logo.png" alt="CU-ICAR" style="width: 100px; height: 40px;">
 			</div>
@@ -621,7 +621,7 @@
 			<h2 style="margin-top: 30px; font-size: 30px;">HMI Screen HiL Testing</h2>
 
 			<div class="video-container">
-				<iframe width="1080" height="720" src="https://www.youtube.com/embed/QzV6TwpLAik" frameborder="0"
+				<iframe width="1080" height="720" src="https://www.youtube.com/embed/2rcx8ovRnnM" frameborder="0"
 					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 					allowfullscreen>
 				</iframe>
@@ -648,7 +648,7 @@
 			<!-- TITLE + LOGO -->
 			<div style="display: flex; justify-content: space-between; align-items: center;">
 				<h2 style="margin: 0; font-size: clamp(18px, 3vw, 34px); flex: 1; margin-right: 10px;">
-					<a href="#"> MUSIC-REACTIVE LED VISUALIZER USING ARDUINO </a>
+					MUSIC-REACTIVE LED VISUALIZER USING ARDUINO
 				</h2>
 				<img src="images/Home.jpg" alt="CU-ICAR" style="width: 50px; height: 50px;">
 			</div>
@@ -679,7 +679,7 @@
 			<h2 style="margin-top: 30px; font-size: 30px;"> Music reactive LED IN ACTION </h2>
 
 			<div class="video-container">
-				<iframe width="1080" height="720" src="https://www.youtube.com/embed/IkWAoybO4-A" frameborder="0"
+				<iframe width="1080" height="720" src="https://www.youtube.com/embed/NJeZ0NRiVMA" frameborder="0"
 					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 					allowfullscreen>
 				</iframe>
