Opens in a new tab for FB, LinkiedIn and GitHub located at the last - All Pages

--- a/generic.html
+++ b/generic.html
@@ -224,11 +224,12 @@
 
           <ul class="icons alt" style="justify-content: center;">
             <h3 style=" font-size: 25px;">Social Media</h3>
-            <li><a href="https://www.facebook.com/rangarajan.ashwinkumar" class="icon brands alt fa-facebook-f"><span
-                  class="label">Facebook</span></a></li>
-            <li><a href="https://github.com/AshwinK77?tab=repositories" class="icon brands alt fa-github"><span
-                  class="label">GitHub</span></a></li>
-            <li> <a href="https://www.linkedin.com/in/ashwin-kumar-rangarajan" class="icon brands alt fa-linkedin">
+            <li><a href="https://www.facebook.com/rangarajan.ashwinkumar" class="icon brands alt fa-facebook-f"
+                target="_blank"><span class="label">Facebook</span></a></li>
+            <li><a href="https://github.com/AshwinK77?tab=repositories" class="icon brands alt fa-github"
+                target="_blank"><span class="label">GitHub</span></a></li>
+            <li> <a href="https://www.linkedin.com/in/ashwin-kumar-rangarajan" class="icon brands alt fa-linkedin"
+                target="_blank">
                 <span class="label">LinkedIn</span></a>
             </li>
           </ul>
