--- a/elements.html
+++ b/elements.html
@@ -328,8 +328,8 @@
 				<div style="text-align:center; margin-top: 10px;">
 					<span class="dot-0" onclick="currentSlide0(1)"
 						style="cursor:pointer; display:inline-block; height:15px; width:15px; margin: 0 5px; background-color:#bbb; border-radius:50%;"></span>
-					<span class="dot-0" onclick="currentSlide0(2)"
-						style="cursor:pointer; display:inline-block; height:15px; width:15px; margin: 0 5px; background-color:#bbb; border-radius:50%;"></span>
+					<!-- <span class="dot-0" onclick="currentSlide0(2)"
+						style="cursor:pointer; display:inline-block; height:15px; width:15px; margin: 0 5px; background-color:#bbb; border-radius:50%;"></span> -->
 				</div>
 
 				<!-- 🔧 TOOLS USED -->
