DO Images Changed - Flowcharts added

--- a/elements.html
+++ b/elements.html
@@ -413,48 +413,48 @@
 
 						<div class="slide" style="min-width: 100%;">
 							<div class="media-container">
-								<img src="images/Brake_Supervisor.png" alt="Overall Supervisory Control">
+								<img src="images/Brake_Supervisor_Architecture.png" alt="Overall Supervisory Control">
 							</div>
 							<div style="text-align: center; font-size: 18px; margin-top: 10px;">
-								<strong> Overall Supervisory Control </strong>
+								<strong> Supervisory State Machine Architecture </strong>
 							</div>
 						</div>
 
 						<div class="slide" style="min-width: 100%;">
 							<div class="media-container">
-								<img src="images/Brake_Supervisory_Control.png" alt="Individual Actuator Control">
+								<img src="images/Actuator_Control_Architecture.png" alt="Individual Actuator Control">
 							</div>
 							<div style="text-align: center; font-size: 18px; margin-top: 10px;">
-								<strong>Individual Actuator Control</strong>
+								<strong> Individual Actuator State Machine Architecture </strong>
 							</div>
 						</div>
 
 						<div class="slide" style="min-width: 100%;">
 							<div class="media-container">
-								<img src="images/Brake_Supervisory_Stateflow.png"
+								<img src="images/Brake_Supervisor.png" alt="Actuator Control Block">
+							</div>
+							<div style="text-align: center; font-size: 18px; margin-top: 10px;">
+								<strong> Brake & Actuator Supervisors </strong>
+							</div>
+						</div>
+
+						<div class="slide" style="min-width: 100%;">
+							<div class="media-container">
+								<img src="images/Control_System_Architecture.png"
 									alt="Brake System Start-up State Machine">
 							</div>
 							<div style="text-align: center; font-size: 18px; margin-top: 10px;">
-								<strong>Brake System Start-up State Machine</strong>
+								<strong> Control System Architecture </strong>
 							</div>
 						</div>
 
 						<div class="slide" style="min-width: 100%;">
 							<div class="media-container">
-								<img src="images/Brake_Actuator_Supervisory_Stateflow.png"
+								<img src="images/Individual_Control_Block.png"
 									alt="Individual Actuators Start-up State Machine">
 							</div>
 							<div style="text-align: center; font-size: 18px; margin-top: 10px;">
-								<strong>Individual Actuators Start-up State Machine</strong>
-							</div>
-						</div>
-
-						<div class="slide" style="min-width: 100%;">
-							<div class="media-container">
-								<img src="images/Brake_Control_Block.png" alt="Actuator Control Block">
-							</div>
-							<div style="text-align: center; font-size: 18px; margin-top: 10px;">
-								<strong>Actuator Control Block</strong>
+								<strong> Individual Control Block Definition </strong>
 							</div>
 						</div>
 
@@ -489,6 +489,7 @@
 						style="height: 40px; margin-left: 10px;">
 					<img src="images/New_Eagle_Icon_1.png" alt="New Eagle" title="New Eagle"
 						style="height: 40px; margin-left: 10px;">
+					<img src="images/GitHub.png" alt="GitHub" title="GitHub" style="height: 40px; margin-left: 10px;">
 				</footer>
 
 			</article>
