Description Added - Tiny Change

--- a/elements.html
+++ b/elements.html
@@ -434,7 +434,7 @@
 								<img src="images/Brake_Supervisor.png" alt="Actuator Control Block">
 							</div>
 							<div style="text-align: center; font-size: 18px; margin-top: 10px;">
-								<strong> Brake & Actuator Supervisors </strong>
+								<strong> Brake System & Individual Actuator Supervisors </strong>
 							</div>
 						</div>
 
